# Editra Plugin: CodeBrowser
# Author: Cody Precord
# License: wxWindows

#-----------------------------------------------------------------------------#

Version 0.7
Released: xx/x/2009

New:
+Add support for XML/Html patch from Rudi Pettazzi

Bug Fixes:

#-----------------------------------------------------------------------------#

Version 0.6
Released: 12/11/2008

New:

Bug Fixes:
+Fix not getting cleared when the current buffer is a blank buffer
+Fix cpp method signatures with * or in & in them not being added to tree view

#-----------------------------------------------------------------------------#

Version 0.5
Released: 11/02/2008

New:
+Add some basic support for C++, D
+Improved support for TCL/Tk (Namespaces)

Bug Fixes:
+Php browser now properly supports short tags <? as well as the long tag <?php

#-----------------------------------------------------------------------------#

Version 0.4
Released: 07/11/2008

New:
+Add C Support (Macros, Functions)
+Add Ruby Support (Classes, Modules, Functions, Methods)

Bug Fixes:
+Prevent multiple duplicate jobs from being dispatched at startup

#-----------------------------------------------------------------------------#

Version 0.3
Released: 06/15/2008

New:
+ Use Pygments library to aid in parsing
+ Added support for the following filetypes
  - SQL (Packages, Procedures, Functions)
  - PL/SQL (Packages, Procedures, Functions)

Bug Fixes:
+Fixed some string parsing errors in the python parser
+Fix improper parsing of comments in Editra Style Sheets

#-----------------------------------------------------------------------------#

Version 0.2
Released: 04/25/2008

New:
+Added support for the following filetypes
  - Ferite (Namespaces, Classes, Functions, Protocols)
  - haXe (Classes, Class Methods, Class Variables, Functions)
  - MatLab (Functions)
  - Octave (Functions)
  - Scheme (Functions)
  - System Verilog (Classes, Tasks)
  - Verilog (Tasks)

Bug Fixes:
+Notebook syncronization on session load